--- a/form-insatisfacao.html
+++ b/form-insatisfacao.html
@@ -189,9 +189,95 @@
       };
 
       const consultoresPorFilial = {
-        "Campos Novos": ["João Silva", "Maria Oliveira"],
-        "Rio do Sul": ["Carlos Souza", "Fernanda Lima"],
-        "Lages": ["Pedro Martins", "Ana Paula"]
+      "Rio do Sul": [
+        "FRANCISCA DA SILVA SOUZA",
+        "KEILA MAIARA SANDRI VARELA",
+        "TAINÁ LUANA VALLE",
+        "FABIO SCHULTZ",
+        "GIAN PABLO GADOTTI",
+        "SILVIO MEES",
+        "ANDRE MARCOS PIRES DE LIMA",
+        "GABRIEL MONDINI",
+        "RICARDO PICKLER RODRIGUES",
+        "RUBENS STAHNKE",
+        "RUDINEI BEIGER",
+        "CEZAR AUGUSTO WATRAS",
+        "DIEGO CARLOS PEREIRA",
+        "OSVALDINO SOARES FILHO",
+        "ADEMIR KAMMER",
+        "ALAN DIRKSEN",
+        "ALDO FELAU NETO ROSSETTI",
+        "ANDREONE BUZZI",
+        "ANDRÉ WILL",
+        "DEIVIS FERNANDO FERREIRA",
+        "DEIVIS VALMIR WERMEISTER PAHL",
+        "FILIPE GUNTHER",
+        "MARCOS YAN SIEVES",
+        "RODRIGO BENTO",
+        "VITOR SOFKA JUNIOR"
+      ],
+      "Campos Novos": [
+          "CARIANA FLORES FERNANDES",
+          "EDINA DIAS FLORES",
+          "ESTER PADILHA PEGORARO",
+          "GABRIELE DO N DE BRITO",
+          "MAIARA TEREZINHA CAMARGO",
+          "DIEGO RIBEIRO LOPES",
+          "GEANE DE DEUS E SILVA CELSO",
+          "HUGO LUIS DA SILVA",
+          "LEANDRO CRESCENCIO",
+          "LUCAS KRAEMER",
+          "MICHELE ALVES",
+          "PABLO EDUARDO MOREIRA FAGUNDES",
+          "REGINALDO PEDRINHO B BIOLCHI",
+          "SERGIO LUIZ CALEGARI JUNIOR",
+          "EDSON LUCIANO DA SILVA",
+          "JOVANIL RODRIGUES DA SILVA",
+          "ANGELO MURILO ALVES",
+          "CARLOS ANTONIO LAZZARI",
+          "CARLOS EDUARDO MELLO ANTUNES",
+          "DIMITRI MARATEU XAVIER",
+          "GUSTAVO LUIZ FERREIRA",
+          "GUSTAVO PADILHA DE JESUS",
+          "MATHEUS CESAR VARELA RODRIGUES",
+          "SANDRO DA SILVA",
+          "VITOR LOPES",
+          "ANDRE LUIZ PANVLAK",
+          "ALESSANDRO ZIBETTI",
+          "ALIANDRA DOS SANTOS FAGUNDES",
+          "MAURO TREVISOL CRUZ DA SILVA",
+          "SUELLEN SONAGLIO",
+          "ALEXANDRE SCHUSTER",
+          "CARLOS ALEXANDER B CARUSO",
+          "DANIEL CARLOS FRANÇA",
+          "EDER JOSE THIBES",
+          "GILMAR PINHEIRO",
+          "JOSÉ OTÁVIO SANTIN",
+          "LUIZ HENRIQUE GONÇALVES",
+          "LUIZ HENRIQUE PAGANINI",
+          "MARCIO TREVISOL CRUZ DA SILVA",
+          "MARCO ANTONIO SILVA",
+          "VALDEMAR RODRIGUES INACIO"
+        ],
+        "Lages": [
+          "BRUNA CRISTINA CANANI ANTUNES",
+          "FABIANA DE SOUZA SALES L PIRAN",
+          "ALAN ROSSONI DE MELO",
+          "BRUNO ALVES ANTUNES",
+          "DARLON ABREU DE MELO",
+          "LUCAS RANSONI CAMPOS MORAIS",
+          "RONALDO MATEUS LOPES LEITE",
+          "FABIANO DE CARVALHO SOUSA",
+          "LUCAS SILVA DE ANDRADE",
+          "PAULO FERNANDO FERREIRA",
+          "DOUGLAS SAMIR PEREIRA",
+          "FERNANDA DA SILVA DE SOUZA",
+          "JEFERSON VARELA CARVALHO",
+          "JONAS MATEUS DE SOUZA ALMEIDA",
+          "MARCIO DIOGO SILVA SOARES",
+          "PABLO MOREIRA AMARAL",
+          "PEDRO OTAVIO DA SILVA"
+        ]
       };
 
       const filialSelect = document.getElementById("filial");
