--- a/form-servicos.html
+++ b/form-servicos.html
@@ -183,12 +183,12 @@
           <input type="checkbox" name="checklist" value="Verificação de filtros">
         </label>
         <label>
-          Inspeção de pneus
-          <input type="checkbox" name="checklist" value="Inspeção de pneus">
+          Parte Hidráulica
+          <input type="checkbox" name="checklist" value="Parte Hidrauilica">
         </label>
         <label>
-          Higienização da cabine
-          <input type="checkbox" name="checklist" value="Higienização da cabine">
+          Caixa de Transmissão
+          <input type="checkbox" name="checklist" value="Caixa de Transmissão">
         </label>
       </div>
 
@@ -226,7 +226,7 @@
           "Curitibanos", "São Cristóvão do Sul", "Ponte Alta do Norte",
 
           // Região Videira
-          "Videira", "Iomerê", "Tangará", "Pinheiro Preto", "Arroio Trinta", "Ibicaré", "Treze Tílias"
+          "Videira", "Iomerê", "Tangará", "Pinheiro Preto", "Arroio Trinta", "Ibicaré", "Treze Tílias", "Ibiam", "Salto Veloso"
         ],
 
         "Rio do Sul": [
@@ -399,4 +399,5 @@
   <script type="module" src="firebase.js"></script>
 </body>
 </html>
+
 
