--- a/form-pecas.html
+++ b/form-pecas.html
@@ -146,8 +146,8 @@
       <label>Nome do Cliente *</label>
       <input type="text" name="nomeCliente" required>
 
-      <label>Nome da Fazenda *</label>
-      <input type="text" name="nomeFazenda" required>
+      <label>Nome da Fazenda </label>
+      <input type="text" name="nomeFazenda" >
 
       <label>Telefone *</label>
       <input type="tel" name="telefone" required>
@@ -166,8 +166,8 @@
             <option value="Implemento">Implemento</option>
       </select>
 
-      <label>Horímetro *</label>
-      <input type="text" name="horimetro" required>
+      <label>Horímetro </label>
+      <input type="text" name="horimetro">
 
       <label>Nome do Consultor *</label>
       <select name="nomeConsultor" id="nomeConsultor" required>
@@ -401,5 +401,6 @@
   <script type="module" src="firebase.js"></script>
 </body>
 </html>
+
 
 
