--- a/form-servicos.html
+++ b/form-servicos.html
@@ -145,8 +145,8 @@
       <label>Nome do Cliente *</label>
       <input type="text" name="nomeCliente" required>
 
-      <label>Nome da Fazenda *</label>
-      <input type="text" name="nomeFazenda" required>
+      <label>Nome da Fazenda </label>
+      <input type="text" name="nomeFazenda" >
 
       <label>Telefone *</label>
       <input type="tel" name="telefone" required>
@@ -165,8 +165,8 @@
             <option value="Implemento">Implemento</option>
       </select>
 
-      <label>Horímetro *</label>
-      <input type="text" name="horimetro" required>
+      <label>Horímetro </label>
+      <input type="text" name="horimetro" >
 
       <label>Nome do Consultor *</label>
       <select name="nomeConsultor" id="nomeConsultor" required>
@@ -399,5 +399,6 @@
   <script type="module" src="firebase.js"></script>
 </body>
 </html>
+
 
 
