--- a/form-planodemanutencao.html
+++ b/form-planodemanutencao.html
@@ -145,8 +145,8 @@
       <label>Nome do Cliente *</label>
       <input type="text" name="nomeCliente" required>
 
-      <label>Nome da Fazenda *</label>
-      <input type="text" name="nomeFazenda" required>
+      <label>Nome da Fazenda </label>
+      <input type="text" name="nomeFazenda" >
 
       <label>Telefone *</label>
       <input type="tel" name="telefone" required>
