--- a/form-comercial.html
+++ b/form-comercial.html
@@ -145,8 +145,8 @@
       <label>Nome do Cliente *</label>
       <input type="text" name="nomeCliente" required>
 
-      <label>Nome da Fazenda *</label>
-      <input type="text" name="nomeFazenda" required>
+      <label>Nome da Fazenda </label>
+      <input type="text" name="nomeFazenda" >
 
       <label>Telefone *</label>
       <input type="tel" name="telefone" required>
@@ -165,8 +165,8 @@
             <option value="Implemento">Implemento</option>
         </select>
 
-      <label>Horímetro *</label>
-      <input type="text" name="horimetro" required>
+      <label>Horímetro </label>
+      <input type="text" name="horimetro" >
 
       <label>Possui trato para Troca</label>
       <div class="checkbox-group">
@@ -414,6 +414,7 @@
   <script type="module" src="firebase.js"></script>
 </body>
 </html>
+
 
 
 
