--- a/menu-manutencoes.html
+++ b/menu-manutencoes.html
@@ -208,6 +208,11 @@
         <i class="fas fa-clipboard-list"></i>
         <p>Planos Vigentes</p>
       </a>
+
+      <a href="DashboardServicos.html" class="card">
+        <i class="fas fa-clipboard-list"></i>
+        <p>Dashboard Servicos</p>
+      </a>
       
     </div>
   </div>
@@ -345,5 +350,6 @@
 
 </body>
 </html>
+
 
 
